# suprema-gw

./: .gitignore  README.md  build_env.sh  meson.build  meson_options.txt
files/: defigo-biostar2.service
files/proto/: suprema-gw.proto
include/: common.h  grpc.h  server.h
include/biostar2sdk/: BS_API.h
include/biostar2sdk/BSCommon/data/: BS2Rs485Channel.h
src/: app.cpp  app.h.in  common.cpp  grpc.cpp  server.cpp
subprojects/: grpc.wrap
